src/test/deca/context/invalid/homemade/tests/test372_appel_methode_non_methode.deca
// test invalide de la règle 3.72


class A{

    int x = 4;
}

{
    A a = new A();
    a.x(50);
}
